<resources>
    <string name="app_name">Quran Pak</string>
    <string name="Quran">Holy Quran</string>
    <string name="translation">Translation</string>
    <string name="ParaIndex">Para Index</string>
    <string name="Search">Search</string>
    <string name="suraindex">Surah Index</string>
    <string name="Surah">Surah Index</string>
    <string name="title_activity_nav_drawer">Nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="resume"></string>
</resources>