<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backcover"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="#E8E8E8"
        android:fontFamily="serif"
        android:text="@string/Quran"
        android:textAlignment="center"
        android:textColor="#FEFCFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/surahIndex"
        android:layout_width="249dp"
        android:layout_height="69dp"
        android:layout_marginBottom="28dp"
        android:width="300dp"
        android:backgroundTint="#251C13"
        android:padding="15dp"
        android:radius="10dp"
        android:text="@string/Surah"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/paraIndex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/molvi"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/paraIndex"
        android:layout_width="248dp"
        android:layout_height="65dp"
        android:layout_marginBottom="260dp"

        android:width="300dp"
        android:backgroundTint="#251C13"
        android:padding="15dp"
        android:text="@string/ParaIndex"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ssearch"
        android:layout_width="249dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:width="300dp"
        android:backgroundTint="#251C13"
        android:padding="15dp"
        android:radius="10dp"
        android:text="@string/Search"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paraIndex" />

    <TextView
        android:id="@+id/molvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textColor="#FEFCFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/translation"
        android:textColor="#FEFCFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>